# OpenDwarfs

./: .gitignore  ACKNOWLEDGEMENT  LICENSE  Makefile.am  Makefile.in  OCD-2012-02-03  OCD-2012-02-03~  README  README~  aclocal.m4  autogen.sh  autorun.sh  config.h.in  config.h.in~  config.system  configure  configure.ac  cuda_config.txt  density  density_energy  episode.txt  kernelTime.txt  maketestall.sh  phi.out  runtime.txt
Branch-and-Bound/astar/: Makefile.mk  README
REMOVE/bitonic-sort/: Makefile.mk  PaulExampleTest  main.c
REMOVE/oddeven-sort/: OddEvenSort.cl  README  main2.c
SPMV/: Makefile.mk  csr.c  sparse_formats.h  spmv_csr_kernel.cl
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
bitonic-sort/: Makefile.mk  main.c
branch-and-bound/astar/: Makefile.mk  README  README~  astar.c  astar.cl
branch-and-bound/nqueens/: Makefile.mk  README  kernels_nqueens.cl  main.cpp  nqueen_cl.cpp  nqueen_cl.h  nqueen_cpu.cpp  nqueen_cpu.h
combinational-logic/crc/: Makefile.mk  README  crc.c  crc_algo.c  crc_algo_kernel.cl
combinational-logic/crc/inc/: crc_formats.h  eth_crc32_lut.h
combinational-logic/crc/src/: crc_algo.c  crc_kernel.cl  crc_kernel_fpga_optimized.cl
combinational-logic/crc/src-common/: crc_formats.c
combinational-logic/crc/src-test/: createcrc.c
combinational-logic/dwarf-crc/: Makefile.mk  README  crc.c  crc_kernel.cl
dense-linear-algebra/kmeans/: Makefile.mk  README  cluster.c  kmeans.c  kmeans_opencl.cpp  kmeans_opencl_kernel.cl
dense-linear-algebra/lud/: Makefile.mk  README  common.c  lud.c  lud_kernel.cl
dense-linear-algebra/rodinia-kmeans/: Makefile.mk  README  getopt.c
dense-linear-algebra/rodinia-lud/: Makefile.mk  README  lud.c  lud_kernel.cl
dwarf-cfd/: Makefile.mk  cfd.cpp  cfd_kernel.cl
dwarf-crc/: Makefile.mk  crc.c  crc_kernel.cl
dwarf-spmm/CSR/: Makefile.mk  Unsaved Document 1  csr.c  csr_kernel.cl  sparse_formats.h
dynamic-programming/nw/: Makefile.mk  README  needle.c  needle_fpga.cl  needle_kernel.cl  needle_kernel_opt_gpu.cl
dynamic-programming/rodinia-nw/: Makefile.mk  README  needle.c
dynamic-programming/swat/: Makefile.mk  README  alignments.cpp  functions.h  global.h  kernels.cl  kernels_opt_gpu.cl  param.cpp  prints.cpp  sequences.cpp  swat.cpp  timeRec.cpp  timeRec.h
example_swat/: Makefile.mk
finite-state-machine/dwarf-tdm/: GpuTemporalDataMining.cl  GpuTemporalDataMining.cpp  Makefile.mk  README  strncpy.cl  types.h
finite-state-machine/tdm/: GpuTemporalDataMining.cl  GpuTemporalDataMining.cpp  GpuTemporalDataMining_gold.cpp  Makefile.mk  OptimalThresholds.h  README  dataio.cpp  dataio.h  global.h  strncmp.cl  tdm_ocl.cpp  tdm_ocl_kernel.cl  types.h
gem/: LICENSE  Makefile.mk  build.sh  calculate_potential.cpp  extrapolate_bonds.c  floating_centers.c  populate_stats.c  run_msms.c  write_avs.c  write_grid.c  write_xyzr.c
gem/include/: defines.h  file_io.h  gem.h
gem/include/visualize/: GLee.h
graph-traversal/bfs/: Makefile.mk  PaulExampleTest  README  bfs.cpp  bfs_fpga.cl  bfs_kernel.cl
graph-traversal/bitonic-sort/: Makefile.mk  README  bitonicSort.cl  main.c  sort.cl
graph-traversal/oddeven-sort/: Makefile.mk  PaulExampleTest  README  main2.c
graph-traversal/rodinia-bfs/: Makefile.mk  bfs.cpp
graphical-models/hmm/: Makefile.mk  README  bwa_hmm_opencl.cl  main_bwa_hmm.c  run_bwa.sh
include/: common_args.c  common_args.h  rdtsc.c  rdtsc.h
mapreduce/: runtime.txt
mapreduce/fsa-blastcl/: LICENSE  README  cgenSeq.pl  makefile  makefile_bkup  protgen  test.sh
mapreduce/fsa-blastcl/data/: BLOSUM80
mapreduce/fsa-blastcl/include/: _vec.h  constants.h  encoding.h  fasterBytepackGappedScoring.h  gappedExtension.h  global.h  index.h  karlin.h  oldGappedScoring.h  readFile.h  readindex.h  scoreMatrix.h  seg.h  (+4 more)
mapreduce/psicl-blast/: '  LICENSE  cluster  readdb  run1hit.sh  runhit.sh  runtestO.sh  runtime.txt
n-body-methods/gem/: Makefile.mk  PaulExampleTest  README  calculate_potential.cl  calculate_potential.cpp  calculate_potential.cu  check_cmdline.cpp  dump_vertices.c  estimate_a.cpp  extrapolate_bonds.c  floating_centers.c  gem_no_ui.cpp  open_pqr_run_msms.cpp  populate_stats.c  radix_sort.c  read_msms.c  read_pqr.c  run_msms.c  vector_math.c
oddeven-sort/: Makefile.mk  OddEvenSort.cl
openacc-tests/: Makefile.mk
openacc-tests/include/: ctsar.h  ctsar_dbg.h  ctsar_impl.hpp  device.hpp  pgi_shim.h
openacc-tests/polybench-gpu/: README.txt  compileCodes.sh
openacc-tests/src/: ctsar.cpp  pgi_shim.c
openacc-tests/structured-grid/: helmholtz.c
opts/: opts.h
psicl-blast/: README  Samrunhit.sh  blast  formatdb  makefile  run2hit.sh  run2hit.shbkup  runtest.sh  runtest2hitr0Fermi.sh  runtest2hitr1Fermi.sh  ssearch  tags
psicl-blast/include/: alignments.h  nucleotideLookup.h  print.h  vbyte.h
psicl-blast/src/: blastch.c  cluster.c  constants.c  createindex.c  formatdb.c  genwin.h  hitMatrixch.c  lnfac.h  parameters.c  print.c  readFile.c  readdbApp.c  rsdb.c  search.c  search.c.old  searchch.c  seg.c  semiGappedScoring.c  semiGappedScoringGPU.cl  semiGappedScoringGPU.cu  tags  unpack.c  vbyte2.c  vec.c  wordLookupDFA.c  wordLookupDFAch.c  writeFile.c
rodinia-bfs/: Makefile.mk  bfs.cpp  bfs_kernel.cl
rodinia-kmeans/: Makefile.mk  kmeans.c  kmeans_opencl.cpp  kmeans_opencl_kernel.cl
rodinia-lud/: Makefile.mk  lud.c
rodinia-nw/: Makefile.mk  README  needle_kernel.cl
rodinia-srad/: Makefile.mk  srad_kernel.cl
samplecl/: Makefile.mk  PaulExampleTest  README  samplecl.c  samplecl_kernel.cl
sparse-linear-algebra/SPMV/: Makefile.mk  PaulExampleTest  README  csr.c  sparse_formats.h  spmv_csr_kernel.cl
spectral-methods/fft/: Makefile.mk  PaulExampleTest  README
structured-grids/rodinia-srad/: Makefile.mk  README  run  srad.h
structured-grids/srad/: Makefile.mk  PaulExampleTest  README  srad.c  srad.h  srad_kernel.cl  srad_kernel_opt_gpu.cl
unstructured-grids/cfd/: Makefile.mk  PaulExampleTest  README  cfd.cpp  cfd_kernel.cl
unstructured-grids/dwarf-cfd/: Makefile.mk  README  cfd.cpp  cfd_kernel.cl
(+221 files in other folders)
